Navigation: fix alignment of burger navigation

--- a/src/components/navigation/style.scss
+++ b/src/components/navigation/style.scss
@@ -50,7 +50,7 @@
     font-weight: 700;
     margin-left: auto;
     margin-right: 1.5rem;
-    padding-bottom: 1.5rem;
+    padding-bottom: 1.75rem;
     padding-top: 1.5rem;
     text-transform: uppercase;
     user-select: none;
